--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,30 @@
 {
-    "format_version": 2,
-    "header": {
-        "description": "1PS v3.5.1 by AvgZing, death counter by RavinMaddHatter, AFK Display by DrAv",
-        "name": "BoxOfDevs 1PS, Death, AFK Display",
-        "uuid": "264e9d43-1567-44f3-933b-34530492955a",
-        "version": [
-            3,
-            5,
-            1
-        ],
-        "min_engine_version": [
-            1,
-            21,
-            0
-        ]
+  "format_version": 2,
+  "header": {
+    "description": "Components pack by AvgZing for use on the Oakridge: Survival Unhinged realm. Includes biome display with held compass, droppable mob spawners/budding amethyst, 1 Player Sleep, hours played counter, death counter (by RavinMaddHatter), AFK Display (by DrAv).",
+    "name": "AvgZing-Oakridge Components Pack §8(2.0.0)",
+    "uuid": "e6ecc442-a2e8-43aa-8a5b-ff4aac48f4b6",
+    "version": [2, 0, 0],
+    "min_engine_version": [1, 21, 120]
+  },
+  "modules": [
+    {
+      "type": "data",
+      "uuid": "de3afeee-9b81-462d-943f-99e2ceae246e",
+      "version": [2, 0, 0]
     },
-    "modules": [
-        {
-            "type": "data",
-            "uuid": "a87781ae-a30d-45f0-b83a-6f775ad4e44f",
-            "version": [
-                3,
-                5,
-                1
-            ]
-        }
-    ]
+    {
+      "type": "script",
+      "language": "javascript",
+      "uuid": "b9a52a93-7e0d-4657-bfa3-f3ffcf1e6a81",
+      "version": [2, 0, 0],
+      "entry": "scripts/main.js"
+    }
+  ],
+  "dependencies": [
+    {
+      "module_name": "@minecraft/server",
+      "version": "2.3.0"
+    }
+  ]
 }
